--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,7 +27,7 @@
     
 }
 .img_logo{
-    width: 20%;
+    width: 15%;
 }
 
 .navegador{
@@ -319,4 +319,11 @@
 
     .contenido_dere{width: 100%;
     font-size: 1rem;
-}}
+}
+/*comprar tickets*/
+.espacio{
+   align-content: center;    
+}
+
+
+}
